--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
-#Options -Indexes
+Options -Indexes
+
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Credentials true
+Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+Header set Access-Control-Allow-Headers "Content-Type"
 
 RewriteEngine On
 
