--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-.idea
-.vscode
-.phpintel
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
 .env
-storage/
-/vendor/
-node_modules/
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
+.phpintel/
