--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "sienekib/mehael",
     "type": "project",
     "require": {
-        "php":"^7.4|^8.2",
-        "symfony/var-dumper": "^7.0",
+        "php":"^7.4|^8.1",
         "vlucas/phpdotenv": "^5.6",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "symfony/var-dumper": "^6.4"
     },
     "require-dev": {
         "filp/whoops": "^2.15"
