--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php":"^7.4|^8.1",
         "vlucas/phpdotenv": "^5.6",
         "ramsey/uuid": "^4.7",
-        "symfony/var-dumper": "^6.4"
+        "symfony/var-dumper": "^6.4",
+        "spatie/browsershot": "^4.0"
     },
     "require-dev": {
         "filp/whoops": "^2.15"
