--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "sienekib/mehael",
     "type": "project",
     "require": {
-        "php":"^7.4|^8.1",
+        "php":"^8.1",
         "vlucas/phpdotenv": "^5.6",
         "ramsey/uuid": "^4.7",
         "symfony/var-dumper": "^6.4",
-        "spatie/browsershot": "^4.0"
+        "spatie/browsershot": "^3.61"
     },
     "require-dev": {
         "filp/whoops": "^2.15"
