--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,4 @@ jobs:
                   server: server.silicacdn.com:25319/ftp
                   username: ${{ secrets.ftp_username }}
                   password: ${{ secrets.ftp_password }}
-                  server-dir: /www/wwwroot/front.silicacdn.com
+                  server-dir: /www/wwwroot/front.silicacdn.com/
