--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,7 +14,7 @@ jobs:
             - name: 📂 Sync files
               uses: SamKirkland/FTP-Deploy-Action@v4.3.4
               with:
-                  server: ftp://54.233.103.110:21
+                  server: ftp.silicacdn.com
                   username: ${{ secrets.ftp_username }}
                   password: ${{ secrets.ftp_password }}
                   server-dir: /www/wwwroot/front.silicacdn.com/
