--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,19 +1,20 @@
 on:
     push:
         branches:
-            - master
-name: Publish Website
+            - staging
+name: 🚀 Deploy website on push
 jobs:
-    FTP-Deploy-Action:
-        name: FTP-Deploy-Action
+    web-deploy:
+        name: 🎉 Deploy
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2.1.0
+            - name: 🚚 Get latest code
+              uses: actions/checkout@v3
+
+            - name: 📂 Sync files
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.4
               with:
-                  fetch-depth: 2
-            - name: FTP-Deploy-Action
-              uses: SamKirkland/FTP-Deploy-Action@3.1.1
-              with:
-                  ftp-server: server.silicacdn.com
-                  ftp-username: ${{ secrets.FTP_USERNAME }}
-                  ftp-password: ${{ secrets.FTP_PASSWORD }}
+                  server: server.silicacdn.com
+                  username: ${{ secrets.ftp_username }}
+                  password: ${{ secrets.ftp_password }}
+                  server-dir: front.silicacdn.com/
