--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -17,4 +17,4 @@ jobs:
                   server: server.silicacdn.com
                   username: ${{ secrets.ftp_username }}
                   password: ${{ secrets.ftp_password }}
-                  server-dir: /www/wwwroot/front.silicacdn.com/
+                  server-dir: /front.silicacdn.com/
