--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "ramsey/uuid": "^4.7",
-        "symfony/var-dumper": "^6.4"
+        "symfony/var-dumper": "^6.4",
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
         "filp/whoops": "^2.15"
